Fixed error on Segments's Scrollbar

--- a/src/styles/css/segment.less
+++ b/src/styles/css/segment.less
@@ -8,7 +8,7 @@
 
   transition: width 0.2s linear;
   .container{
-
+    position: relative;
     height: 100%;
     width: 100%;
     border: 1px solid #cacaca;
@@ -62,9 +62,8 @@
 
     }
     .container-body{
-      padding: 7px;
-      height: 93%;
-      max-height:93%;
+      padding: 3px;
+      height: ~"calc(100% - 45px)";
       display: flex;
       width: ~"calc(100% - 6px)";
     }
